# documcp

./: .gitignore  README.md  pyproject.toml
.github/prd/: PROJECT_PRD.md
.spechistory/: what-is-this.md
features/documcp-shared-kernel-infra-database-sqla/: README.md  pyproject.toml
features/documcp-shared-kernel-infra-database-sqla/src/documcp/shared_kernel/infra/database/sqla/container/: di.py
features/documcp-shared_kernel/: README.md  pyproject.toml
features/documcp-shared_kernel-infra-fastapi/: README.md  pyproject.toml
features/documcp-shared_kernel-infra-fastapi/src/documcp/shared_kernel/infra/fastapi/dtos/request/: pageable.py
features/documcp-shared_kernel-infra-fastapi/src/documcp/shared_kernel/infra/fastapi/exception_handlers/: base.py
features/documcp-shared_kernel/src/documcp/shared_kernel/domain/: value_object.py
features/documcp-shared_kernel/src/documcp/shared_kernel/infra/settings/: model.py
projects/documcp-backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  run.py  run_mcp.py  run_mcp_standalone.py
projects/documcp-backend/src/documcp/backend/: __init__.py  container.py  main.py  mcp_server.py  settings.py
projects/documcp-backend/src/documcp/backend/api/: generation.py
projects/documcp-backend/src/documcp/backend/domain/: models.py
projects/documcp-backend/src/documcp/backend/services/: document_service.py  llm_service.py
projects/documcp-backend/tests/: test_api.py
